corrected a propos and a detail on mobile version

--- a/output/style.css
+++ b/output/style.css
@@ -1,4 +1,4 @@
-
+	
 /*CHARTE GRAPHIQUE
 $color_purple : rgb(160,42,150)
 $color_yellow : rgb(247,185,45)
@@ -400,8 +400,9 @@ padding:0em;}
 .photo{max-width:100%;}
 
 .photo img {max-height: 1300px;}
-footer{top:1600px;
 
+footer {
+	top:700px;
 }
 
 footer h3 {
